test/files/neg/nilary-override.check
nilary-override.scala:7: warning: nullary method assumes an empty parameter list from the overridden definition
class D extends C { override def x: Int = 4 }
                                 ^
nilary-override.scala:4: warning: non-nullary method overrides nullary method
class B extends A { override def x(): Int = 4 }
                                 ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
